# polars-compat-test

./: .gitignore  pyproject.toml
src/: bee_colony.ipynb  test.ipynb
src/.data/datasets/raw/bee_colony/: BIP Bee Colony Loss Clean.csv
src/core/: __init__.py  constants.py
src/dataset/raw/: Bee Colony Census Data by County.csv  Bee Colony Census data by State.csv
src/pl_test/: __init__.py  main.py
src/pl_test/utils/: __init__.py
src/pl_test/utils/proj_data/: __init__.py  operations.py
